[package]
name = "l3_story_game"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "ssr"] }
leptos_axum = "0.6"
leptos_router = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
console_error_panic_hook = "0.1"
thiserror = "1.0"
tracing = "0.1"
gloo-timers = "0.3"
wasm-bindgen = "0.2"

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[dev-dependencies]
playwright = "0.0.20"
tokio-test = "0.4"